[project]
name = "partle-mcp"
version = "0.2.0"
description = "MCP server for the Partle local marketplace — find products in physical stores near you. Stdio mode for installable use; remote HTTP mode also available at https://partle.rubenayla.xyz/mcp/."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rubén Jiménez Mejías", email = "ruben.jimenezmejias@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["mcp", "partle", "marketplace", "local-search", "products", "stores"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
]
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://partle.rubenayla.xyz"
Documentation = "https://partle.rubenayla.xyz/documentation/mcp-setup/"
Repository = "https://github.com/rubenayla/partle-mcp"
Issues = "https://github.com/rubenayla/partle-mcp/issues"

[project.scripts]
partle-mcp = "partle_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["partle_mcp"]
